--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "arshid",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "puppeteer": "^24.6.0"
